--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My Game Website</title>
+<title>Swordlands</title>
 </head>
 <body>
 <h1>Welcome to my website!</h1>
